# PipeTuneLinux

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: activation-preflight.md  architecture.md  autoeq-import.md  bluetooth-policy-diagnostics.md  capture-gain-audit.md  ci.md  diagnostic-fields.md  fedora-kde-setup.md  hardware-quirks.md  hda-repair-guide.md  install.md  lv2-safeguard-plugin.md  measurement-and-calibration.md  measurement-report-fields.md  microphone-repair-guide.md  microphone-verification.md  pipewire-filter-chain-generation.md  profile-contribution-guide.md  profile-database.md  profile-format.md  profile-rollback.md  profile-safety-metadata.md  release-candidate.md  release-checklist.md  roadmap.md  safe-profile-activation.md  wireplumber-routing-diagnostics.md  wireplumber-rule-install-rollback.md  wireplumber-rule-preview.md  wireplumber-rule-state-integrity.md
pipetune/: __init__.py  __main__.py  cli.py  devices.py  doctor.py  models.py  packaging.py  release.py  risk.py
scripts/: fresh-checkout-smoke.sh
tests/: test_activation_paths.py  test_activation_readiness.py  test_activation_state_integrity.py  test_autoeq_parser.py  test_clean_local_cli.py  test_command.py  test_gain_audit.py  test_gain_parser.py  test_gain_recommendations.py  test_hardware_cli.py  test_hardware_quirk_status.py  test_hda_audit.py  test_measurement_analysis.py  test_measurement_cli.py  test_measurement_compare.py  test_measurement_correction.py  test_measurement_response_validation.py  test_measurement_rew_import.py  test_mic_analyze.py  (+42 more)
(+125 files in other folders)
