[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipetune-linux"
version = "0.4.1"
description = "PipeTune Linux diagnostics, safe profile generation, activation safety, and hardened measurement foundation CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PipeTune Linux Maintainers" }
]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = []

[project.scripts]
pipetune = "pipetune.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["pipetune*"]
exclude = ["reports*", "docs*", "tests*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
